# edge-impulse-runner-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  apply.patch  build-aarch64.sh  build.rs  docker-compose.yml  docker-shell.sh  test-aarch64-image-infer.sh
.github/workflows/: docs.yml  edge-impulse-runner.yml
examples/: audio_classify.rs  audio_infer.rs  basic_classify.rs  basic_infer.rs  image_classify.rs  image_infer.rs  run_model.rs  upload_image.rs  video_classify.rs  video_infer.rs
lib/: .gitkeep  README.md
runner/: Cargo.toml  build.rs
runner/examples/: image_infer.rs
runner/src/: error.rs  lib.rs
runner/src/backends/: eim.rs  ffi.rs
runner/src/ffi/: bindings.rs  classifier.rs  error.rs  metadata.rs  mod.rs  signal.rs  types.rs
src/: error.rs  lib.rs  messages.rs  model.rs  tests.rs  types.rs
src/backends/: eim.rs  ffi.rs  mod.rs
src/ffi/: mod.rs  wrapper.rs
src/inference/: messages.rs  mod.rs  model.rs
src/ingestion/: mod.rs
