[package]
name = "edge_impulse_runner"
version = "0.1.0"
edition = "2021"
description = "A Rust library for running Edge Impulse Linux models"
authors = ["Fernando Jiménez Moreno <fernando@edgeimpulse.com>"]
license = "BSD-3-Clause"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
cocoa = "0.26.0"
core-graphics-types = "0.2.0"
core-foundation = "0.9"
objc = "0.2.7"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
gstreamer = "0.23.4"
gstreamer-app = "0.23.4"
gstreamer-video = "0.23.4"
hound = "3.5"
image = "0.25.5"
tempfile = "3.10.0"