[package]
name = "edge_impulse_runner"
version = "0.1.0"
edition = "2021"
description = "A Rust library for running Edge Impulse Linux models"
authors = ["Fernando Jiménez Moreno <fernando@edgeimpulse.com>"]
license = "BSD-3-Clause"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
mime_guess = "2.0.5"
reqwest = { version = "0.12.12", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1.0"
tracing = "0.1.41"
urlencoding = "2.1.3"

[target.'cfg(target_os = "macos")'.dev-dependencies]
cocoa = "0.26.0"
core-graphics-types = "0.2.0"
core-foundation = "0.9"
objc = "0.2.7"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.6"
gstreamer = "0.23.4"
gstreamer-app = "0.23.4"
gstreamer-video = "0.23.4"
hound = "3.5"
image = "0.25.5"
mockito = "1.6.1"
tempfile = "3.10.0"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
tracing-test = "0.2.5"